[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scene/Character/Character.gd" type="Script" id=1]
[ext_resource path="res://Sprite/Player-Sheet.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "fire_reload",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=3]

[node name="Character" type="KinematicBody2D" groups=["Character"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite_character" type="AnimatedSprite" parent="."]
rotation = 1.5708
z_as_relative = false
frames = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 768
limit_bottom = 448
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="bullet_point" type="Node2D" parent="."]
position = Vector2( 17, 1 )

[connection signal="animation_finished" from="Sprite_character" to="." method="_on_Sprite_character_animation_finished"]
